1/1.08/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project05-svc
spec:
  type: ClusterIP
  selector:
    app: project05
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3000
